# aitos

./: .gitignore  AITOS_IDE_架构设计.md  LICENSE  README.md  README_CN.md
aitos/: README.md  package-lock.json  package.json
aitos/src/: acs.ts  index.ts  runtime.ts  types.ts
aitos/src/atoms/: calculation.ts  control.ts  judgment.ts  manipulation.ts  state.ts  telemetry.ts  time.ts  tool-calls.ts
linkarm/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
linkarm-desktop/: CMakeLists.txt  README.md
linkarm-desktop/app/: index.html
linkarm-desktop/include/: Launcher.h
linkarm-desktop/resources/: app.rc
linkarm-desktop/src/: main.cpp
linkarm/scripts/: desktop-build.js  desktop-dev.js
linkarm/src/: context.ts  main.ts  runtime.ts
linkarm/src/graphs/actions/: close-window.acs  create-ai-message-element.acs  handle-input-keydown.acs  init-top-bar.acs  maximize-window.acs  minimize-window.acs  newChat.acs  openAI.acs  openChat.acs  send-message.acs  start-window-drag.acs  switchConversation.acs
linkarm/src/graphs/conversations/: delete-conversation.acs  load-conversations.acs  save-conversations.acs  update-title.acs
linkarm/src/graphs/core/: click-delegate.acs  event-loop.acs  init-conversations.acs  init-messages.acs  load-conversations.acs  load-growths.acs  load-models.acs  main.acs  render.acs  save-conversations.acs  save-growth.acs  save-messages.acs  save-models.acs
linkarm/src/graphs/growth/: call-growth-tool.acs  delete-growth.acs  get-growth-code.acs  get-growth-log.acs  handle-growth-click.acs  (+10 more)
(+107 files in other folders)
